[package]
name = "vss-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = { version = "0.6.16", features = ["headers"] }
chrono = { version = "0.4.26", features = ["serde"] }
diesel = { version = "2.1", features = ["postgres", "r2d2", "chrono", "numeric"] }
diesel_migrations = "2.1.0"
dotenv = "0.15.0"
futures = "0.3.28"
hex = "0.4.3"
jwt-compact = { version = "0.8.0-beta.1", features = ["es256k"] }
log = "0.4.20"
pretty_env_logger = "0.5"
secp256k1 = { version = "0.27.0", default-features = false, features = ["bitcoin_hashes"] }
sha2 = { version = "0.10", default-features = false }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0.67"
tokio = { version = "1.12.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["cors"] }
