[package]
name = "vss-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = { version = "0.6.16", features = ["headers"] }
base64 = "0.13.1"
chrono = { version = "0.4.26", features = ["serde"] }
dotenv = "0.15.0"
futures = "0.3.28"
hex = "0.4.3"
jwt-compact = { version = "0.8.0-beta.1", features = ["es256k"] }
log = "0.4.20"
pretty_env_logger = "0.5"
secp256k1 = { version = "0.27.0", default-features = false, features = ["bitcoin_hashes"] }
sha2 = { version = "0.10", default-features = false }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0.67"
tokio = { version = "1.12.0", features = ["full"] }
tokio-postgres = { git = "https://github.com/prisma/rust-postgres", branch = "pgbouncer-mode", features = ["with-chrono-0_4"] }
tower-http = { version = "0.4.0", features = ["cors"] }

ureq = { version = "2.5.0", features = ["json"] }
postgres-native-tls = { git = "https://github.com/prisma/rust-postgres", branch = "pgbouncer-mode" }
native-tls = "0.2"
